src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: hsl(0, 0%, 97%);
    --foreground: hsl(222, 21%, 12%);

    --card: hsl(0 0% 100%);
    --card-foreground: hsl(224 71.4% 4.1%);

    --popover: hsl(0 0% 100%);
    --popover-foreground: hsl(224 71.4% 4.1%);

    --primary: hsl(10, 69%, 51%);
    --primary-foreground: hsl(210 20% 98%);

    --secondary: hsl(220 14.3% 95.9%);
    --secondary-foreground: hsl(220.9 39.3% 11%);

    --muted: hsl(220 14.3% 95.9%);
    --muted-foreground: hsl(220 8.9% 46.1%);

    --accent: hsl(220 14.3% 95.9%);
    --accent-foreground: hsl(220.9 39.3% 11%);

    --destructive: hsl(0 84.2% 60.2%);
    --destructive-foreground: hsl(210 20% 98%);

    --test: hsl(0 100% 50%);
    --test-foreground: hsl(0 100% 50%);

    --border: hsl(220 13% 91%);
    --input: hsl(220 13% 91%);
    --ring: hsl(224 71.4% 4.1%);

    --radius: 0.5rem;
  }

  .dark {
    --background: hsl(224 71.4% 4.1%);
    --foreground: hsl(210 20% 98%);

    --card: hsl(224 71.4% 4.1%);
    --card-foreground: hsl(210 20% 98%);

    --popover: hsl(224 71.4% 4.1%);
    --popover-foreground: hsl(210 20% 98%);

    --primary: hsl(210 20% 98%);
    --primary-foreground: hsl(220.9 39.3% 11%);

    --secondary: hsl(215 27.9% 16.9%);
    --secondary-foreground: hsl(210 20% 98%);

    --muted: hsl(215 27.9% 16.9%);
    --muted-foreground: hsl(217.9 10.6% 64.9%);

    --accent: hsl(215 27.9% 16.9%);
    --accent-foreground: hsl(210 20% 98%);

    --destructive: hsl(0 62.8% 30.6%);
    --destructive-foreground: hsl(210 20% 98%);

    --border: hsl(215 27.9% 16.9%);
    --input: hsl(215 27.9% 16.9%);
    --ring: hsl(216 12.2% 83.9%);
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

